[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = ["jl.tavera <jl.tavera@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.28.1"
httpx = "^0.27.0"
mangum = "^0.17.0"
boto3 = "^1.34.66"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.8"
moto = "^5.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
